# aviationweather-data-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
py/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  aviationweatherdata_sdk.py  aviationweatherdata_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  operation.py  result.py  spec.py
py/entity/: air_sigmet_entity.py  airport_entity.py  cache_entity.py  cwa_entity.py  g_airmet_entity.py  metar_entity.py  pirep_entity.py  station_info_entity.py  taf_entity.py  tcf_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  log_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  retry_feature.py  streaming_feature.py  test_feature.py
py/test/: runner.py  test_air_sigmet_direct.py  test_air_sigmet_entity.py  test_airport_direct.py  test_airport_entity.py  test_cache_direct.py  test_cache_entity.py  test_cwa_direct.py  test_cwa_entity.py  test_exists.py  test_g_airmet_direct.py  test_g_airmet_entity.py  test_metar_direct.py  test_metar_entity.py  test_netsim.py  test_pipeline.py  test_pirep_direct.py  test_pirep_entity.py  test_primary_utility.py  test_readme_examples.py  test_station_info_direct.py  test_station_info_entity.py  test_taf_direct.py  test_taf_entity.py  test_tcf_direct.py  test_tcf_entity.py
py/utility/: clean.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_spec.py  prepare_auth.py  (+5 more)
(+614 files in other folders)
